<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Applivery
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/applivery_white">


    <RelativeLayout
        android:id="@+id/applivery_feedback_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appliveryTitleHeight"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:background="@color/applivery_primary_color">

        <ImageButton
            android:id="@+id/applivery_feedback_cancel_button"
            android:layout_width="@dimen/appliveryTitleIconButton"
            android:layout_height="@dimen/appliveryTitleIconButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/appliveryIconbuttonMarginRight"
            android:layout_marginRight="@dimen/appliveryIconbuttonMarginRight"
            android:background="@drawable/applivery_close_selector"
            android:contentDescription="@string/appliveryCancelFeedbackButtonDesc"
            android:padding="@dimen/appliveryTitleIconPaddingMedium" />

        <TextView
            android:id="@+id/must_update_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/appliveryTitleHeight"
            android:layout_toRightOf="@+id/applivery_feedback_cancel_button"
            android:gravity="center_vertical"
            android:text="@string/applivery_name"
            android:textColor="@color/applivery_primary_font_color"
            android:textSize="@dimen/appNameTextSize" />

        <ImageButton
            android:id="@+id/applivery_feedback_send_button"
            android:layout_width="@dimen/appliveryTitleIconButton"
            android:layout_height="@dimen/appliveryTitleIconButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/appliveryFabButtonMargin"
            android:layout_marginRight="@dimen/appliveryFabButtonMargin"
            android:background="@drawable/applivery_send_selector"
            android:contentDescription="@string/appliverySendFeedbackButtonDesc" />

        <ImageButton
            android:id="@+id/applivery_feedback_ok_button"
            android:layout_width="@dimen/appliveryTitleIconButton"
            android:layout_height="@dimen/appliveryTitleIconButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/appliveryFabButtonMargin"
            android:layout_marginRight="@dimen/appliveryFabButtonMargin"
            android:animateLayoutChanges="true"
            android:background="@drawable/applivery_done_selector"
            android:contentDescription="@string/appliverynextFeedbackButtonDesc"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/applivery_feedback_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/applivery_feedback_toolbar"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/feedbackSelector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appliveryTabButtonsHeight"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/applivery_tab_button_selector_feedback"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="100"
                android:background="@drawable/applivery_tab_button_selector">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/appliveryFeedbackSelectorText"
                    android:textSize="@dimen/appliveryTabButtonTextSize" />

            </LinearLayout>

            <View
                android:id="@+id/applivery_tab_button_selector_separator"
                android:layout_width="0dp"
                android:layout_height="@dimen/appliveryTabButtonSeparatorHeight"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:id="@+id/applivery_tab_button_selector_bug"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="100"
                android:background="@drawable/applivery_tab_button_selector">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/appliveryBugSelectorText"
                    android:textSize="@dimen/appliveryTabButtonTextSize" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/appliveryFeedbackFormSidePadding"
            android:layout_marginTop="@dimen/appliveryFeedbackTextBoxTopMargin"
            android:layout_marginRight="@dimen/appliveryFeedbackFormSidePadding"
            android:layout_marginBottom="@dimen/appliveryFeedbackTextBoxBottomMargin"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/applivery_feedback_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_toLeftOf="@+id/applivery_feedback_image"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textCursorDrawable="@drawable/applivery_cursor_drawable" />

            <ImageView
                android:id="@+id/applivery_feedback_image"
                android:layout_width="@dimen/appliveryScreenShotWidthSize"
                android:layout_height="@dimen/appliveryScreenShotHeightSize"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/appliveryFeedbackFormSidePadding"
                android:src="@drawable/applivery_icon"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/appliveryFeedbackFormSidePadding"
            android:layout_marginTop="@dimen/appliveryFeedbackTextBoxTopMargin"
            android:layout_marginRight="@dimen/appliveryFeedbackFormSidePadding"
            android:layout_marginBottom="@dimen/appliveryFeedbackTextBoxBottomMargin">

            <TextView
                android:id="@+id/applivery_feedback_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/applivery_feedback_email"
                android:paddingEnd="@dimen/appliveryFeedbackFormSidePadding"
                android:text="@string/appliveryFeedbackEmailLabel"
                android:textColor="@color/applivery_secondary_font_color" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/applivery_feedback_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/appliveryFeedbackEmailHint"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/applivery_cursor_drawable" />

        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/attach_screenshot_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/appliveryFeedbackFormSidePadding"
        android:layout_marginTop="@dimen/appliveryFeedbackFormSidePadding"
        android:layout_marginRight="@dimen/appliveryFeedbackFormSidePadding"
        android:layout_marginBottom="@dimen/appliveryFeedbackFormSidePadding"
        android:background="@android:color/transparent"
        android:shadowColor="@color/applivery_primary_color"
        android:text="@string/appliveryAttachScreenshotSwithText"
        android:textSize="@dimen/appNameTextSize"
        android:theme="@style/AppliverySwitch" />

    <com.applivery.applvsdklib.ui.views.DrawingImageView
        android:id="@+id/appliveryScreenShot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/applivery_feedback_toolbar"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:contentDescription="@string/appliveryScreenshotImageDesc"
        android:visibility="gone" />

</RelativeLayout>
