<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Applivery
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:animateLayoutChanges="true"
        android:id="@+id/applivery_feedback_toolbar"
        android:background="@color/appliveryMainColor"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appliveryTitleHeight">

        <ImageView
            android:id="@+id/applivery_feedback_title_icon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/appliveryTitleIconSize"
            android:layout_height="@dimen/appliveryTitleIconSize"
            android:src="@drawable/applivery_icon"
            android:padding="@dimen/appliveryTitleIconPaddingSmall"
            />

        <TextView
            android:layout_toRightOf="@+id/applivery_feedback_title_icon"
            android:textColor="@android:color/white"
            android:id="@+id/must_update_title"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/appliveryTitleHeight"
            android:textSize="@dimen/appNameTextSize"
            android:text="@string/app_name"
            />

        <ImageButton
            android:id="@+id/applivery_feedback_cancel_button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:layout_width="@dimen/appliveryTitleIconSize"
            android:layout_height="@dimen/appliveryTitleIconSize"
            android:padding="@dimen/appliveryTitleIconPaddingMedium"
            android:layout_marginRight="@dimen/appliveryIconTitleMargin"
            android:contentDescription="@string/appliveryCancelFeedbackButtonDesc"
            android:src="@drawable/applivery_close_selector"
            />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/applivery_feedback_toolbar"
        android:contentDescription="@string/appliveryScreenshotImageDesc"
        android:id="@+id/appliveryScreenShot"
        />


    <LinearLayout
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:id="@+id/applivery_feedback_form"
        android:layout_below="@+id/applivery_feedback_toolbar"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/feedbackSelector"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appliveryTabButtonsHeight">

        <LinearLayout
            android:id="@+id/applivery_tab_button_selector_feedback"
            android:background="@drawable/applivery_tab_button_selector"
            android:layout_gravity="center"
            android:layout_weight="100"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/appliveryFeedbackSelectorText"
                android:gravity="center"
                android:textSize="@dimen/appliveryTabButtonTextSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


        </LinearLayout>

        <View
            android:id="@+id/applivery_tab_button_selector_separator"
            android:background="@android:color/darker_gray"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/appliveryTabButtonSeparatorHeight">

        </View>

        <LinearLayout
            android:id="@+id/applivery_tab_button_selector_bug"
            android:layout_weight="100"
            android:layout_gravity="center"
            android:background="@drawable/applivery_tab_button_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/appliveryBugSelectorText"
                android:gravity="center"
                android:textSize="@dimen/appliveryTabButtonTextSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        </LinearLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:shadowColor="@color/appliveryMainColor"
            android:text="@string/appliveryAttachScreenshotSwithText"
            android:textSize="@dimen/appNameTextSize"
            android:layout_margin="@dimen/appliveryFeedbackFormSidePadding"
            android:id="@+id/attach_screenshot_switch"
            android:layout_gravity="center_horizontal"
            />

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/appliveryFeedbackFormSidePadding"
            android:layout_marginLeft="@dimen/appliveryFeedbackFormSidePadding"
            android:layout_marginBottom="@dimen/appliveryFeedbackTextBoxBottomMargin"
            android:layout_marginTop="@dimen/appliveryFeedbackTextBoxTopMargin"
            >
            <EditText
                android:id="@+id/applivery_feedback_description"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_toLeftOf="@+id/applivery_feedback_image"
                android:layout_gravity="center_horizontal"
                />
            <ImageView
                android:id="@+id/applivery_feedback_image"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/appliveryFeedbackFormSidePadding"
                android:layout_width="@dimen/appliveryScreenShotWidthSize"
                android:layout_height="@dimen/appliveryScreenShotHeightSize"
                android:src="@drawable/applivery_icon"
                />
        </RelativeLayout>




    </LinearLayout>

    <ImageButton
        android:id="@+id/applivery_feedback_next_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/appliveryFabButtonSize"
        android:layout_height="@dimen/appliveryFabButtonSize"
        android:background="@drawable/applivery_arrow_selector"
        android:layout_marginBottom="@dimen/appliveryFabButtonMargin"
        android:contentDescription="@string/appliverynextFeedbackButtonDesc"
        android:layout_marginRight="16dp"

        />

    <ImageButton
        android:id="@+id/applivery_feedback_send_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/appliveryFabButtonSize"
        android:layout_height="@dimen/appliveryFabButtonSize"
        android:background="@drawable/applivery_plane_selector"
        android:contentDescription="@string/appliverySendFeedbackButtonDesc"
        android:layout_marginBottom="@dimen/appliveryFabButtonMargin"
        android:layout_marginRight="@dimen/appliveryFabButtonMargin"
        android:visibility="gone"
        />

</RelativeLayout>